# chess_web

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  leptosfmt.toml  package.json  pnpm-lock.yaml  tailwind.config.js
src/: app.rs  lib.rs  main.rs
src/client/websockets/: chess_board.rs
src/components/: board.rs  check_mate.rs  chess_board.rs  coordinates.rs  menu.rs  mod.rs  notifications.rs  overlay.rs  status_menu.rs  trash.rs
src/components/forms/: join.rs  mod.rs  options.rs  username.rs
src/entities/: chess_board.rs  mod.rs  notification.rs  position.rs  room.rs  stone.rs
src/entities/chess_board/: castle_rules.rs  enums.rs  passants.rs  signals.rs  stones.rs  turns.rs
src/handlers/: mod.rs  mouse.rs
src/server/: chess_server.rs  mod.rs
src/server/middlewares/: cache_control.rs  mod.rs
src/server/websockets/: chess_board.rs  mod.rs  session.rs
src/styles/: base.css  input.css  menu.css  notifications.css  slider.css
src/styles/chess/: board.css  coords.css  pieces.css  squares.css
src/utils/: class_list.rs  element_pool.rs  elements.rs  events.rs  jwt.rs  mod.rs  style.rs
